# multimodal-mental-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: analysis_node.py  close_node.py  question_node.py  reasoning_node.py  routing_node.py
backend/app/models/: events.py  metrics.py  session.py
backend/app/routers/: websocket.py
backend/app/services/: aivisspeech.py  gemini.py  scoring.py  session_logger.py  voice_analysis.py
backend/tests/: test_agent_state.py  test_aivisspeech.py  test_e2e.py  test_gemini.py  test_graph.py  test_main.py  test_models.py  test_nodes.py  test_scoring.py  test_session_logger.py  test_voice_analysis.py  test_websocket.py
docs/: API.md  E2E_CHECKLIST.md  EVALUATION.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  DebugPanel.tsx  SelfReportSlider.tsx  StateExplanation.tsx
frontend/src/hooks/: useFaceAnalysis.ts  useTextBehavior.ts  useVoiceRecording.ts  useWebSocket.ts
frontend/src/test/: App.test.tsx  ChatWindow.test.tsx  DebugPanel.test.tsx  SelfReportSlider.test.tsx  StateExplanation.test.tsx  useFaceAnalysis.test.ts  useTextBehavior.test.ts  useVoiceRecording.test.ts  useWebSocket.test.ts
frontend/src/types/: events.ts
