[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-mental-agent-backend"
version = "0.1.0"
description = "Backend bootstrap for the multimodal mental agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0"
]

[tool.setuptools]
packages = ["app"]
