[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-mental-agent-backend"
version = "0.1.0"
description = "Backend bootstrap for the multimodal mental agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "google-genai>=1.0.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "librosa>=0.10.0,<1.0.0",
  "soundfile>=0.12.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
